Added email count functionality
